Bug 323246 - When pasting URLs the text should say "Add URL into Message as Text" instead of "Add URL into Message Text"
Summary: When pasting URLs the text should say "Add URL into Message as Text" instead ...
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: 4.10.5
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-08-06 20:07 UTC by Ovidiu-Florin BOGDAN
Modified: 2014-09-26 00:05 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.12
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ovidiu-Florin BOGDAN 2013-08-06 20:07:51 UTC
This function name is confusing as it leads the user to believe that the URL being pasted in the message is pasted as a URL.

It should be renamed to something clearer, like "Add URL into Message as Text"

Reproducible: Always

Steps to Reproduce:
1. copy a URL from a web page
2. paste in the Kmail composer
Actual Results:  
the context menu appears and the first option leads the user to think that the function creates a link.

Expected Results:  
the function adds the text to the message.
Comment 1 Ovidiu-Florin BOGDAN 2013-08-06 20:08:37 UTC
I've started to work on a patch for this.
Comment 2 Laurent Montel 2013-10-02 19:02:22 UTC
Git commit e13ab3c4db2bf58ee5c7ef6be50973d20be04780 by Montel Laurent.
Committed on 02/10/2013 at 19:02.
Pushed by mlaurent into branch 'master'.

Fix Bug 323246 - When pasting URLs the text should say "Add URL into Message as Text" instead of "Add URL into Message Text"

FIXED-IN: 4.12

M  +1    -1    kmail/editor/kmcomposewin.cpp

http://commits.kde.org/kdepim/e13ab3c4db2bf58ee5c7ef6be50973d20be04780