Fix Bug 323246 - When pasting URLs the text should say "Add URL into Message as Text" instead of "Add URL into Message Text"

FIXED-IN: 4.12
BUG: 323246