editor/kmcomposewin.cpp
@@ -2195,7 +2195,7 @@ bool KMComposeWin::insertFromMimeData( const QMimeData *source, bool forceAttach
         }
       } else {
         KMenu p;
-        const QAction *addAsTextAction = p.addAction( i18np("Add URL into Message &Text", "Add URLs into Message &Text", urlList.size() ) );
+        const QAction *addAsTextAction = p.addAction( i18np("Add URL into Message as &Text", "Add URLs into Message as &Text", urlList.size() ) );
         const QAction *addAsAttachmentAction = p.addAction( i18np("Add File as &Attachment", "Add Files as &Attachment", urlList.size() ) );
         const QAction *selectedAction = p.exec( QCursor::pos() );
 
